data/issues_raw/buildinstall/buildinstall_train_9417.txt
Faild to build a pip package for TensorFlow with GPU

TF master - 24/2/2017
When I build a pip package for TensorFlow with GPU support by invoke the following command:
$ bazel build --config=opt --config=cuda //tensorflow/tools/pip_package:build_pip_package
I see following error;
ERROR: /root/tensorflow/tensorflow/contrib/verbs/BUILD:61:1: C++ compilation of rule '//tensorflow/contrib/verbs:grpc_verbs_service' failed: crosstool_wrapper_driver_is_not_gcc failed: error executing command external/local_config_cuda/crosstool/clang/bin/crosstool_wrapper_driver_is_not_gcc -U_FORTIFY_SOURCE '-D_FORTIFY_SOURCE=1' -fstack-protector -fPIE -Wall -Wunused-but-set-parameter ... (remaining 151 argument(s) skipped): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
In file included from ./tensorflow/contrib/verbs/grpc_verbs_service.h:25:0,
from tensorflow/contrib/verbs/grpc_verbs_service.cc:22:
./tensorflow/core/distributed_runtime/rpc/grpc_call.h:74:28: error: 'core' has not been declared
class UntypedCall : public core::RefCounted {
^
./tensorflow/core/distributed_runtime/rpc/grpc_call.h:74:34: error: expected '{' before 'RefCounted'
class UntypedCall : public core::RefCounted {
^
./tensorflow/core/distributed_runtime/rpc/grpc_call.h:75:2: error: expected primary-expression before 'public'
public:
^
./tensorflow/core/distributed_runtime/rpc/grpc_call.h:75:2: error: expected '}' before 'public'